--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -20,7 +20,7 @@
   .course-card {
     border-radius: 16px;
     /* overflow: hidden; */
-    padding: 16px;
+    padding: 18px;
   }
 
   .course-tag {
@@ -46,7 +46,7 @@
     padding-bottom: 10px;
   }
   .bottom-button {
-    padding-top: 4rem;
+    padding-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,6 +72,8 @@
   .ant-card-body {
     border: 1px solid #000000 25%;
     padding: 12px 0 !important;
+    display: grid;
+    gap: 20px;
   }
   .cover-image {
     border-radius: 8px;
@@ -143,6 +145,9 @@
   .no-match {
     padding: 8px 12px;
     color: gray;
+  }
+  .header-top {
+    padding: 0px !important;
   }
 }
 
@@ -194,7 +199,7 @@
     padding-bottom: 10px;
   }
   .bottom-button {
-    padding-top: 4rem;
+    padding-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -220,6 +225,8 @@
   .ant-card-body {
     border: 1px solid #000000 25%;
     padding: 12px 0 !important;
+    display: grid;
+    gap: 20px;
   }
   .cover-image {
     border-radius: 8px;
@@ -292,6 +299,9 @@
     padding: 8px 12px;
     color: gray;
   }
+  .header-top {
+    padding: 0px !important;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -328,6 +338,7 @@
     line-height: 125%;
     font-size: 14px;
     font-weight: 400;
+    padding: 2px;
   }
 
   .course-desc {
@@ -344,7 +355,7 @@
     padding-bottom: 10px;
   }
   .bottom-button {
-    padding-top: 4rem;
+    padding-top: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -370,6 +381,8 @@
   .ant-card-body {
     border: 1px solid #000000 25%;
     padding: 12px 0 !important;
+    display: grid;
+    gap: 20px;
   }
   .cover-image {
     border-radius: 8px;
@@ -477,6 +490,7 @@
     line-height: 125%;
     font-size: 14px;
     font-weight: 400;
+    padding: 2px;
   }
 
   .course-desc {
@@ -519,6 +533,8 @@
   .ant-card-body {
     border: 1px solid #000000 25%;
     padding: 12px 0 !important;
+    display: grid;
+    gap: 20px;
   }
   .cover-image {
     border-radius: 8px;
@@ -627,6 +643,7 @@
     line-height: 125%;
     font-size: 14px;
     font-weight: 400;
+    padding: 2px;
   }
 
   .course-desc {
@@ -663,6 +680,8 @@
   .ant-card-body {
     border: 1px solid #000000 25%;
     padding: 12px 0 !important;
+    display: grid;
+    gap: 20px;
   }
   .cover-image {
     border-radius: 8px;
