--- a/src/components/feedback/feedbacksection.css
+++ b/src/components/feedback/feedbacksection.css
@@ -11,7 +11,7 @@
     padding-bottom: 5%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -34,7 +34,7 @@
     width: 90%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -147,7 +147,7 @@
 
     }
 
-    .feeback-headers {
+    .feeback-secondary-paragraphs {
         width: 90%;
         display: flex;
         flex-direction: column;
@@ -173,7 +173,7 @@
         width: 90%;
     }
 
-    .feeback-headers {
+    .feeback-secondary-paragraphs {
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -265,7 +265,7 @@
 
     }
 
-    .feeback-headers {
+    .feeback-secondary-paragraphs {
         width: 90%;
         display: flex;
         flex-direction: row;
@@ -290,7 +290,7 @@
         width: 90%;
     }
 
-    .feeback-headers {
+    .feeback-secondary-paragraphs {
         flex-direction: row;
 
         display: flex;
@@ -385,7 +385,7 @@
 
     }
 
-    .feeback-headers {
+    .feeback-secondary-paragraphs {
         width: 90%;
         display: flex;
         align-items: center;
@@ -412,7 +412,7 @@
         width: 90%;
     }
 
-    .feeback-headers {
+    .feeback-secondary-paragraphs {
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -488,8 +488,6 @@
 
 }  */
 
-
-
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .feedback-main {
@@ -503,7 +501,7 @@
     padding-bottom: 5%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     display: flex;
     align-items: center;
@@ -582,7 +580,7 @@
     padding-bottom: 5%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     display: flex;
     align-items: center;
@@ -661,7 +659,7 @@
     padding-bottom: 5%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     display: flex;
     align-items: center;
@@ -740,7 +738,7 @@
     padding-bottom: 5% !important;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     display: flex;
     align-items: center;
@@ -772,7 +770,7 @@
   }
 
   .secondary-paragraph {
-    padding: 20px !important;
+    padding: 20px;
   }
 
   .feedback-divider {
@@ -843,7 +841,7 @@
     padding-bottom: 5%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     margin-top: 3%;
   }
@@ -941,7 +939,7 @@
     padding-bottom: 5%;
   }
 
-  .feeback-headers {
+  .feeback-secondary-paragraphs {
     width: 90%;
     /* margin-top: 3%; */
   }
@@ -960,7 +958,6 @@
     height: 70%;
     width: 90%;
   }
-
 
   .feedback-cards {
     display: flex;
@@ -1023,12 +1020,12 @@
   .student-images {
     display: flex;
   }
-  
-  .feeback-headers {
+
+  .feeback-secondary-paragraphs {
     flex-direction: row;
 
     display: flex;
-        align-items: flex-start;
+    align-items: flex-start;
     justify-content: space-evenly;
   }
 }
