--- a/src/components/staticHome/statichome.css
+++ b/src/components/staticHome/statichome.css
@@ -562,6 +562,7 @@
     /* gap: 36px; */
     height: 700px;
     width: 100%;
+    margin-bottom: 50vh;
     /* display: flex;
       flex-direction: column;
       align-items: center;
