--- a/src/components/timerHome/timerHome.css
+++ b/src/components/timerHome/timerHome.css
@@ -111,7 +111,7 @@
   .download-button {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     border: 1px solid #841d26;
     padding: 5px;
     border-radius: 30px;
@@ -171,7 +171,7 @@
 
   .right-part {
     display: none;
-
+    width: 35%;
   }
 
   .TimerImage {
@@ -320,7 +320,7 @@
     flex-direction: row;
     padding: 50px 30px;
     background-color: #f3e8ea;
-    gap: 50px;
+    gap: 20px;
   }
 
   .left-part {
@@ -337,7 +337,7 @@
 
   .col-grid {
     display: grid;
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(1, auto);
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
@@ -473,7 +473,6 @@
 
   .dynamic-image {
     display: flex;
-    flex-direction: column;
     text-align: left;
     justify-content: flex-start !important;
     align-items: start;
