--- a/src/components/feedback/feedbacksection.css
+++ b/src/components/feedback/feedbacksection.css
@@ -1,3 +1,5 @@
+
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .feedback-main {
@@ -12,6 +14,12 @@
   }
   .next-and-pre-buttons{
     display: none;
+  }
+  .feeback-headers {
+    margin-top: 3%;
+    padding: 20px;
+    display: grid;
+    gap: 15px;
   }
 
   .feeback-secondary-paragraphs {
@@ -616,6 +624,7 @@
     margin-top: 3%;
     padding: 10px;
     gap: 15px;
+
   }
 
   .primary-heading-and-button {
@@ -778,6 +787,9 @@
     align-items: center;
     justify-content: space-evenly;
     margin-top: 3%;
+  }
+  .feeback-headers {
+    flex-direction: row;
   }
 
   .second-main {
