--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -66,7 +66,7 @@
     border-radius: 30px;
   }
   .secondary-paragraph.coloured-padding {
-    padding: 0px;
+    padding: 0px !important;
   }
 }
 
@@ -141,7 +141,7 @@
     border-radius: 30px;
   }
   .secondary-paragraph.coloured-padding {
-    padding: 0px;
+    padding: 0px !important;
   }
 }
 
@@ -218,7 +218,7 @@
     border-radius: 30px;
   }
   .secondary-paragraph.coloured-padding {
-    padding: 0px;
+    padding: 0px !important;
   }
 }
 
@@ -295,7 +295,7 @@
     border-radius: 30px;
   }
   .secondary-paragraph.coloured-padding {
-    padding: 0px;
+    padding: 0px !important;
   }
 }
 
