--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 .page-gap {
   padding-top: 0;
   padding-bottom: 0;
-  margin-top: 120px;
+  margin-top: 180px;
 }
 .arrow-style {
   width: 15px;
@@ -52,7 +52,7 @@
 }
 
 .prime-color {
-  color: var(--primary-color) !important
+  color: var(--primary-color) !important;
 }
 
 .mt-zero {
@@ -63,21 +63,21 @@
 }
 .text-elipses-2 {
   display: -webkit-box;
-  -webkit-line-clamp: 2; 
-  line-clamp: 2; 
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
- max-height: 64px; 
+  max-height: 64px;
 }
 .text-elipses-3 {
   display: -webkit-box;
-  -webkit-line-clamp: 3; 
-  line-clamp: 3; 
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
- max-height: 78px; 
+  max-height: 78px;
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -323,7 +323,7 @@
     font-size: 48px;
     font-weight: 600;
     line-height: 125%;
-            width: 100%;
+    width: 100%;
     color: var(--primary-heading-colour);
     font-family: var(--primary-font-family);
   }
